# liteevo

./: .gitignore  CLAUDE.md  README.md  mcp_browsergym.py  pyproject.toml
data/criteria/: 001.txt  002.txt  004.txt  008.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  022.txt  024.txt  025.txt  026.txt  027.txt  030.txt
data/playbooks/: PLAYBOOK_SCHEMA.txt
data/prompts/: GENERATE_ANSWER.jinja2  GENERATE_ANSWER.txt  PLAYBOOK_SCHEMA.txt  UPDATE_PLAYBOOK.jinja2  UPDATE_PLAYBOOK.txt
data/tasks/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  009.txt  012.txt  013.txt  015.txt  017.txt  024.txt  027.txt  028.txt
docs/: BROWSERGYM.md  BROWSERGYM_API.md
examples/arc-agi-2/: README.md  generate_arc_tasks.py  generate_simple_subset.py
examples/arc-agi-2-simple/: generate_tasks.py
examples/arc-agi-2-simple/criteria/: template.jinja2
examples/arc-agi-2-simple/tasks/: template.jinja2
examples/ascii_digit/: generate_ascii_tasks.py
examples/ascii_digit/criteria/: 003.txt  005.txt  006.txt  007.txt  009.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  023.txt  028.txt  029.txt  template.jinja2
examples/ascii_digit/tasks/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  template.jinja2
examples/assistant_bench/: PLAYBOOK_SCHEMA.txt  README.md  generate_assistant_bench.py
examples/assistant_bench/criteria/: 001_validation_0.txt  002_validation_1.txt  003_validation_2.txt  004_validation_3.txt  005_validation_4.txt  006_validation_5.txt  007_validation_6.txt  008_validation_7.txt  009_validation_8.txt  010_validation_9.txt  011_validation_10.txt  012_validation_11.txt  013_validation_12.txt  014_validation_13.txt  015_validation_14.txt  016_validation_15.txt  017_validation_16.txt  018_validation_17.txt  019_validation_18.txt  020_validation_19.txt  021_validation_20.txt  022_validation_21.txt  023_validation_22.txt  024_validation_23.txt  025_validation_24.txt  026_validation_25.txt  027_validation_26.txt  028_validation_27.txt  029_validation_28.txt  030_validation_29.txt  031_validation_30.txt  032_validation_31.txt  033_validation_32.txt  template.jinja2
examples/assistant_bench/tasks/: 001_validation_0.txt  002_validation_1.txt  003_validation_2.txt  004_validation_3.txt  005_validation_4.txt  006_validation_5.txt  007_validation_6.txt  008_validation_7.txt  009_validation_8.txt  010_validation_9.txt  011_validation_10.txt  template.jinja2  (+22 more)
examples/browsecomp/: PLAYBOOK_SCHEMA.txt  generate_browsecomp.py
examples/maze/: generate_maze_tasks.py
examples/miniwob/: README.md  generate_miniwob.py
examples/random_number/: criterion.txt  task.txt
examples/workarena/: generate_workarena.py
prompts/: GENERATE_ANSWER.jinja2  PLAYBOOK_SCHEMA.txt  UPDATE_PLAYBOOK.jinja2
scripts/: generate_ascii_tasks.py
src/liteevolve/: __init__.py  browsergym_api.py  cli.py  evolve.py  generate.py  provider.py
(+2510 files in other folders)
