[project]
name = "liteevolve"
version = "0.1.0"
description = "A lightweight self-evolution training framework for LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.0",
    "click>=8.0.0",
]

[project.scripts]
evolve = "liteevolve.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liteevolve"]
